# api/Reforge.Api.Common/ReforgeApiHost.cs
@@ -24,8 +24,6 @@ using Reforge.Core.Ping;
 using Reforge.Core.Ping.Application;
 using Reforge.Core.Profiles;
 using Reforge.Core.Profiles.Application;
-using Reforge.Core.Reminders;
-using Reforge.Core.Reminders.Application;
 using Reforge.Core.Shared;
 using Reforge.Core.Subscriptions;
 using Reforge.Core.Subscriptions.Application;
@@ -158,7 +156,6 @@ public static class ReforgeApiHost
         builder.Services.AddScoped<IActivitiesUseCase, ActivitiesManager>();
         builder.Services.AddScoped<IWorkoutsUseCase, WorkoutsManager>();
         builder.Services.AddScoped<IMeasurementsUseCase, MeasurementsManager>();
-        builder.Services.AddScoped<IRemindersUseCase, RemindersManager>();
         builder.Services.AddScoped<IWeeklyProgressUseCase, WeeklyProgressManager>();
         builder.Services.AddScoped<IChatUseCase, ChatManager>();
         builder.Services.AddScoped<ISubscriptionsUseCase, SubscriptionsManager>();
